--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 consul:
     image: gliderlabs/consul-server
-    net: host 
+    #net: host 
     command: -bootstrap
 
 redis:
@@ -10,14 +10,16 @@ redis:
 
 registrator:
     image: gliderlabs/registrator
-    net: host
+    #net: host
     volumes: 
       - /var/run/docker.sock:/tmp/docker.sock
-    command: consul://127.0.0.1:8500
+    command: consul://consul:8500
+    links:
+      - consul
 
 app:
     build: .
     ports: 
       - 5000 
-    volumes:
-      - /etc/hosts:/etc/hosts
+    links:
+      - consul
