--- a/nginx-template.conf
+++ b/nginx-template.conf
@@ -2,12 +2,11 @@
 
 upstream app {
   least_conn;
-  {{range service "tatooine_app-8000"}}server {{.Node}}:{{.Port}} max_fails=3 fail_timeout=60 weight=1;
-  {{else}}server 127.0.0.1:65535; # force a 502{{end}}
+  {{range service "tatooine_app"}}server {{.Address}}:{{.Port}} max_fails=3 fail_timeout=60 weight=1;{{end}}
 }
 
 server {
-  listen 8888;
+  listen 8000;
   server_name tatooine;
 
   location / {
